@@ -1,3 +1,4 @@
+3/28/12 extend lines a bit beyond the bounds of the grid
 3/28/12 create LGColors
 3/28/12 constrain lines to the range of the graph
 3/28/12 quick-and-dirty implementation of equation using Swing spinners
